--- a/lab-1/firstmlprogram.ipynb
+++ b/lab-1/firstmlprogram.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "25fda5e6-a558-461b-a4cb-3b21afc223e5",
+   "execution_count": 47,
+   "id": "843c2d17-c7e6-4939-9f5d-8d618f652159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c145cf57-3881-4efa-9827-690527ebd66b",
+   "execution_count": 48,
+   "id": "95cd1e81-651a-453c-8bc7-4685773b9aa1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"DataSet.csv\")"
+    "data = pd.read_csv('data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1b2d3fae-17d7-4bfa-8777-423af4e7bf5e",
+   "execution_count": 49,
+   "id": "3e63fc2e-cbe8-473c-a1b3-a7ebc530e70b",
    "metadata": {},
    "outputs": [
     {
@@ -48,14 +48,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Exp</th>\n",
+       "      <th>exp</th>\n",
        "      <th>sky</th>\n",
        "      <th>air temp</th>\n",
        "      <th>humidity</th>\n",
        "      <th>wind</th>\n",
        "      <th>water</th>\n",
        "      <th>forecast</th>\n",
-       "      <th>enjoy</th>\n",
+       "      <th>enjoy sport</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -99,7 +99,7 @@
        "      <td>warm</td>\n",
        "      <td>high</td>\n",
        "      <td>strong</td>\n",
-       "      <td>cold</td>\n",
+       "      <td>cool</td>\n",
        "      <td>change</td>\n",
        "      <td>yes</td>\n",
        "    </tr>\n",
@@ -108,14 +108,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   Exp     sky  air temp  humidity     wind  water  forecast  enjoy\n",
-       "0    1   sunny      warm    normal   strong   warm      same    yes\n",
-       "1    2   sunny      warm      high   strong   warm      same    yes\n",
-       "2    3   rainy      cold      high   strong   warm    change     no\n",
-       "3    4   sunny      warm      high   strong   cold    change    yes"
+       "   exp    sky air temp humidity    wind water forecast enjoy sport\n",
+       "0    1  sunny     warm   normal  strong  warm     same         yes\n",
+       "1    2  sunny     warm     high  strong  warm     same         yes\n",
+       "2    3  rainy     cold     high  strong  warm   change          no\n",
+       "3    4  sunny     warm     high  strong  cool   change         yes"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,31 +126,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3fb48ed0-e564-4539-bda0-66e029c8ee5d",
+   "execution_count": 50,
+   "id": "db107501-e443-407c-b731-2fb935d55397",
    "metadata": {},
    "outputs": [],
    "source": [
-    "concepts = np.array(data)[:, :-1]"
+    "concepts=np.array(data)[:,1:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7bb79b60-579e-41db-8e4f-1997ba9e720c",
+   "execution_count": 51,
+   "id": "ade951d7-b3a0-4114-bd76-410ef39f7023",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, ' sunny', ' warm', ' normal', ' strong', ' warm', ' same'],\n",
-       "       [2, ' sunny', ' warm', ' high', ' strong', ' warm', ' same'],\n",
-       "       [3, ' rainy', ' cold', ' high', ' strong', ' warm', ' change'],\n",
-       "       [4, ' sunny', ' warm', ' high', ' strong', ' cold', ' change']],\n",
+       "array([['sunny', 'warm', 'normal', 'strong', 'warm', 'same'],\n",
+       "       ['sunny', 'warm', 'high', 'strong', 'warm', 'same'],\n",
+       "       ['rainy', 'cold', 'high', 'strong', 'warm', 'change'],\n",
+       "       ['sunny', 'warm', 'high', 'strong', 'cool', 'change']],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,27 +161,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6c5edabd-f4c7-4185-a34d-80f62006d66e",
+   "execution_count": 52,
+   "id": "d6350886-632e-437e-8c2c-6c4ea0837b06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = np.array(data)[:, -1]"
+    "target=np.array(data)[:,-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "34fbcad3-cece-45e3-a4bc-e536dbdf22c3",
+   "execution_count": 53,
+   "id": "b32f1b20-b666-490a-bd29-e0ff63598257",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([' yes', ' yes', ' no', ' yes'], dtype=object)"
+       "array(['yes', 'yes', 'no', 'yes'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,62 +192,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "f14ebd23-e34d-46d6-8ba9-3a2b3534e83d",
+   "execution_count": 54,
+   "id": "53e5d343-88cd-46c4-a06e-48aee9c30799",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(con, tar):\n",
-    "   \n",
-    "    for i, val in enumerate(tar):\n",
-    "        if val == \"yes\":\n",
-    "            specific_h = con[i].copy()\n",
+    "def train(con,tar):\n",
+    "    for i,val in enumerate(tar):\n",
+    "        if val == 'yes':\n",
+    "            specific_h=con[i].copy()\n",
     "            break\n",
-    "\n",
-    "    for i, val in enumerate(con):\n",
-    "        if tar[i] == \"yes\":\n",
-    "            for x in range(len(specific_h)):\n",
+    "    for i,val in enumerate(con):\n",
+    "        if tar[i]=='yes':\n",
+    "            for x in range (len(specific_h)):\n",
     "                if val[x] != specific_h[x]:\n",
-    "                    specific_h[x] = \"?\"\n",
+    "                    specific_h[x]='?'\n",
     "                else:\n",
     "                    pass\n",
-    "                    \n",
-    "\n",
     "    return specific_h"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "ae84cb22-738c-4395-b230-44c01e1c7533",
+   "execution_count": 55,
+   "id": "bd57800b-ab86-4d7b-9254-ee9de416f76b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "['sunny' 'warm' '?' 'strong' '?' '?']\n"
      ]
     }
    ],
    "source": [
-    "print(train(concepts, target))"
+    "print(train(concepts,target))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8587508f-a009-4746-9ccc-371d1aa6139f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -259,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
